export class BankEmployee {
  public signContract(contract: string): string {
    return contract;
  }
}
